app/assets/stylesheets/member/members.scss
.membersList {
    position: absolute;
    background-color: var(--background-secondary);
    top: 48px;
    bottom: 0px;
    right: 0px;
    width: 240px;
    color: white;
    padding-top: 20px;
    overflow-y: scroll;
}

.memberPlate {
    padding: 8px 8px;
    margin: 0px 4px 0px 8px;
    display: flex;
    align-items: center;
}

.memberName {
    user-select: none;
    font-weight: bold;
    color: var(--text-muted);
}

.memberPlate:hover {
    background: var(--channel-hover);
    border-radius: 5px;
}

.memberPlate:hover .memberName {
    color: var(--text-normal);
}

